--- a/home.css
+++ b/home.css
@@ -376,7 +376,7 @@ button::after{
     margin-bottom: 15px;
     border-radius: 100px 100px 30px 30px;
     /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6); */
-    z-index: 5;
+    z-index: 3;
 }
 
 .item_image {
@@ -414,7 +414,7 @@ button::after{
     margin: 13px;
     width: 60px;
     height: 24px;
-    z-index: 999;
+    /* z-index: 999; */
 }
 
 .languageContainer img{
@@ -452,6 +452,7 @@ button::after{
     transition: transform 0.5s ease;
     transform: translateX(0);
     box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+    z-index: 0;
 }
 
 .switchBall.changeToSpanish{
@@ -585,7 +586,8 @@ transform: translateX(100%);
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 8;
+    /* z-index: 8; */
+    z-index: 4;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.9);
 }
@@ -596,7 +598,6 @@ transform: translateX(100%);
     width: 100%;
     max-width: 900px;
     margin: 200px auto;
-    z-index: 2;
 }
 
 .close_icon {
@@ -609,7 +610,7 @@ transform: translateX(100%);
     font-size: 40px;
     transition: 0.3s;
     cursor: pointer;
-    z-index: 3;
+    /* z-index: 3; */
     text-shadow: 0 0 6px rgba(0, 0, 0, 0.9);
 }
 
