--- a/404.css
+++ b/404.css
@@ -20,7 +20,7 @@ body {
 #qrcode-div-id {
     display: flex;
     /* flex: 0.7; */
-    margin: 20px;
+    /* margin: 20px; */
     align-items: center;
     flex-direction: column;
     text-align: center;
@@ -33,6 +33,15 @@ h2 {
 
 .pan_text{
     color: rgba(243, 56, 56, 0.88)
+}
+
+.backArrow{
+    position: absolute;
+    top: 16px;
+    left: 28px;
+    margin: 0;
+    font-size: 26px;
+    cursor: pointer;
 }
 
 #cart_contents_id {
@@ -59,27 +68,89 @@ h2 {
     /* width: 100%;   */
     /* height: 400px; */
     overflow-y: hidden;
-    /* overflow-y: hidden; */
-    
-    /* overflow:hidden; */
-    
-    /* overflow: contain; */
 }
+
+/* #paymentQr_id{
+    border: 4px solid white;
+    
+} */
+
+#pay_div_id{
+     display: flex;
+    /* flex-direction: row-reverse; */
+    /* padding: 20px; */
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    height: 0;
+    transition: height 0.4s ease;
+    z-index:1;
+
+    width: 80%;
+    min-width: 300px;
+    max-width: 500px;
+    /* max-height: 600px; */
+    /* border: 2px solid black; */
+
+    border-radius: 16px;
+    background-color: #cfe1f7;  
+    /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    overflow: hidden;
+    transition-duration: 0.6s;
+    transition-timing-function: ease;
+}
+
+   #pay_a{
+            /* color: rgb(0, 140, 255);  */ 
+            /* font-style: italic; */
+            text-decoration: none; 
+            cursor: pointer;
+            font-weight: 800;
+            font-size: 28px;
+         }
+        
+        #pay_p{
+            color: black;
+    text-decoration:none;
+            font-weight: 500;
+        }
+
+
+#pay_text{
+    font-style: italic; text-decoration:none;
+}
+
+  #pay_div_id.open{
+        height:500px;
+    }
 
 .main_container{
     display: flex;
-    justify-content: center;
-    margin-top: 100px;
-    margin-left: 30px;
     flex-direction: row-reverse;
     align-items: center;
+    padding: 20px;
+    
     width: 80%;
-    height: auto;
+    max-width: 800px;
+    min-width: 300px;
     min-height: 500px;
-    max-width: 900px;
     max-height: 600px;
-    border-radius: 20px;
+
+    border-radius: 16px;
     background-color: white;  
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
     /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
 }
 
@@ -136,20 +207,15 @@ h2 {
 
 
     .main_container{
-        margin: 0;
-        margin-top: 50px;
         /* margin-block: auto; */
        /*  margin-bottom: 120px; */
      display: flex;
      flex-direction: column;
      /* align-items: center; */
-     /* margin: auto; */
-    width: 90%;
-    height: 90vh;
+     /* margin: 0 auto; */
+    width: 80%;
+    /* height: 90vh; */
     max-width: 500px;
-    max-height: 700px;
-    /* border-radius: 50px; */
-    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
 }
 
 #cart_contents_id {
