--- a/404.css
+++ b/404.css
@@ -14,13 +14,10 @@ body {
 
 #qrcode {
     margin-inline: 40px;
-    /* margin-bottom: 20px; */
 }
 
 #qrcode-div-id {
     display: flex;
-    /* flex: 0.7; */
-    /* margin: 20px; */
     align-items: center;
     flex-direction: column;
     text-align: center;
@@ -35,26 +32,21 @@ h2 {
     color: rgba(243, 56, 56, 0.88)
 }
 
-.backArrow{
+.closeIcon{
     position: absolute;
     top: 16px;
     left: 28px;
     margin: 0;
-    font-size: 26px;
+    font-size: 40px;
     cursor: pointer;
 }
 
 #cart_contents_id {
-    /* flex:1; */
-    /* position: relative; */
     width: 80%;
-    /* height: 20%; */
     max-height: 500px;
-    /* border-radius: 0 0 30px 30px; */
     margin-block: 20px;
     overflow-y: auto;
     flex-direction: column;
-    /* overflow: hidden; */
 }
 
 .cartContent {
@@ -65,51 +57,38 @@ h2 {
 }
 
 .cartItems {
-    /* width: 100%;   */
-    /* height: 400px; */
     overflow-y: hidden;
 }
 
-/* #paymentQr_id{
-    border: 4px solid white;
-    
-} */
 
 #pay_div_id{
      display: flex;
-    /* flex-direction: row-reverse; */
-    /* padding: 20px; */
     justify-content: center;
     align-items: center;
     text-align: center;
     
     height: 0;
-    transition: height 0.4s ease;
+    transition: height 0.5s ease;
     z-index:1;
 
     width: 80%;
     min-width: 300px;
     max-width: 500px;
-    /* max-height: 600px; */
-    /* border: 2px solid black; */
 
     border-radius: 16px;
     background-color: #cfe1f7;  
-    /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    /* box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px; */
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     position: absolute;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
     overflow: hidden;
-    transition-duration: 0.6s;
-    transition-timing-function: ease;
+    /* transition-duration: 0.6s; */
+    /* transition-timing-function: ease; */
 }
 
    #pay_a{
-            /* color: rgb(0, 140, 255);  */ 
-            /* font-style: italic; */
             text-decoration: none; 
             cursor: pointer;
             font-weight: 800;
@@ -151,14 +130,12 @@ h2 {
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
 }
 
 .cartItemContainter {
     display: flex;
     flex-direction: row;
     position: relative;
-    /* width: 90%; */
     height: 70px;
     margin: 15px 10px 0 15px;
     padding: 0 0 10px 0;
@@ -168,16 +145,13 @@ h2 {
 
 .leftpic {
     flex: 1;
-    /* position: relative;  */
 }
 
 .leftpic img {
     width: auto;
     height: 100%;
     overflow: hidden;
-
     object-fit: contain;
-    /* border-radius: 5px; */
 }
 
 .rightname {
@@ -196,7 +170,6 @@ h2 {
     left: 0;
     width: 100%;
     height: 87% !important;
-    /* TODO: 'fix'/solve this problem later*/
     filter: grayscale(100%) brightness(50%);
     clip-path: inset(0 0 0 50%);
 }
@@ -207,22 +180,14 @@ h2 {
 
 
     .main_container{
-        /* margin-block: auto; */
-       /*  margin-bottom: 120px; */
      display: flex;
      flex-direction: column;
-     /* align-items: center; */
-     /* margin: 0 auto; */
     width: 80%;
-    /* height: 90vh; */
     max-width: 500px;
 }
 
 #cart_contents_id {
     width: 96%;
-    /* height: 100%; */
-    /* border-radius: 0 0 30px 30px; */
-    /* margin: 20px; */
     flex-direction: column;
 }
     
