--- a/404.css
+++ b/404.css
@@ -2,8 +2,9 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Lato", sans-serif;
-    /* background-color: #f1f8fb; */
-    background-image: url('background_image.png');
+    background-color: #f1f8fb;
+    background-color: #1e1f1f;
+    /* background-image: url('background_image.png'); */
     background-size: cover; /* Scales the image to cover the entire element */
     background-position: center; /* Centers the background image */
     background-repeat: no-repeat;
@@ -14,6 +15,10 @@ body {
 
 #qrcode {
     margin-inline: 40px;
+}
+
+#total_id{
+    font-weight: 700;
 }
 
 #qrcode-div-id {
@@ -47,14 +52,14 @@ h2 {
     margin-block: 20px;
     overflow-y: auto;
     flex-direction: column;
-}
-
-.cartContent {
     display: block;
     flex: 1;
     height: 90%; 
     background-color: white;
 }
+
+/* .cartContent {
+} */
 
 .cartItems {
     overflow-y: hidden;
@@ -124,8 +129,9 @@ h2 {
 
     border-radius: 16px;
     background-color: white;  
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    
+    /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
+    box-shadow: rgb(99, 138, 164) 0px 20px 30px -10px;
+    box-shadow: rgba(54, 78, 99, 0.992) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     position: absolute;
     top:50%;
     left:50%;
