--- a/home.css
+++ b/home.css
@@ -565,27 +565,29 @@ transform: translateX(100%);
     display: flex;
     /* align-content: center; */
     flex-direction: column;
-    position: fixed;
+    position: relative;
     /* top:50%;
     left:50%;
     transform: translate(-50%,-50%); */
-    top: 54px;
-    left: 0;
+    /* padding-block-start: 70px; */
+     top: 34px;
+    /*left: 0;
     right:0;
-    bottom: 0;
+    bottom: 0; */
     width: 90%;
-    height: 90%;
-    min-height: 620px;
-    max-height: 680px;
+    /* height: 1%; */
+    min-height: 600px;
+    /* max-height: 520px; */
     max-width: 400px;
     margin: 10px auto;
     background-color: #fffffffc;
     border-radius: 20px;
     /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
 
-    justify-content: center;    /* center horizontally */
+    justify-content: center;
+    /* justify-content: space-between; */
     align-items: center;  
-    align-content: center;
+    /* align-content: center; */
     /* overflow: scroll; */
 
     /* transition: background-color 10s ease; */
@@ -653,7 +655,39 @@ p::after{
     font-size: 16px;
 }
 
+
+#copyNotificationId{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    height: 70px;
+    width: 90%;
+    /* bottom: 16px; */
+    /* right:16px; */
+    font-size: medium;
+    border: none;
+    /* border: 2px solid green; */
+    background-color: #F0FDF4;
+    color: green;
+    box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3);
+
+    opacity: 0; 
+    border-radius: 5px;
+    margin-block: auto ;
+    transition: opacity 0.3s ease-in-out;
+}
+
+#copyNotificationId.opac{
+    opacity:1;
+    transition: opacity 0.3s ease-in-out;
+}
+
 #save-qr-button{
+    display: none;
     position: absolute;
     height: 50px;
     width: 90%;
@@ -663,6 +697,21 @@ p::after{
     /* right:16px; */
     font-size: 20px;
     border: none;
+    background-color: #4791e1;
+    color: white;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+
+#save-order-link-button{
+    position: absolute;
+    height: 50px;
+    width: 90%;
+    bottom: 20px;
+    font-size: 20px;
+    border: none;
+    /* background-color: #e1b347; */
     background-color: #4791e1;
     color: white;
     border-radius: 40px;
