--- a/home.css
+++ b/home.css
@@ -816,18 +816,25 @@ p::after{
     width: 100%;
     height: 0;
     /* background-color: #94cbe3; */
-    border-radius: 0px 0px 24px 24px  ;
-    background-color: #6d93af;
+    border-radius: 0px 0px 24px 24px;
+     background-color: #6498bc;
+    
     z-index: 4;
     transition: height 0.6s ease;
     /* background-color 0s ease-in-out; */
     /* transition-delay: 0s, 0s, 0s; */
+    box-shadow: inset 0 0 0 10px #6498bc, inset 0 0 0 14px #fff;
     overflow: hidden;
 }
 
 #saveContainerId.show {
     /* padding-top: 40px; */
-    box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3);
+    /* box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3); */
+    
+    
+    /* box-shadow: inset 0 0 0 5px darkblue; */
+     /* box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3), inset 0 0 0 10px #6d93af, inset 0 0 0 14px #fff; */
+   
     height: 100%;
 }
 
@@ -840,6 +847,7 @@ p::after{
     background-color: #e1968e;
     cursor: pointer;
     color: white;
+    /* box-shadow: 2px -2px 0 #fff, 5px 5px 0 rgba(0,0,0,0.2); */
 }
 
 
