--- a/home.css
+++ b/home.css
@@ -267,8 +267,8 @@ body {
 #cart_contents_id {
   position: fixed;
   top: 28px;
-  left: 6px;
-  right: 6px;
+  left: 10px;
+  right: 10px;
   /* width: auto; */
   /* margin-inline: 6px; */
   max-width: 430px;
@@ -289,7 +289,7 @@ body {
 .cartContent {
     display: flex;
     flex-direction: column;
-    min-width: 388px;
+    min-width: 380px;
     width: 100%;
     height:100%;
     /* height: 400px; */
@@ -905,10 +905,10 @@ p::after{
 @media (min-width: 450px) {
   #cart_contents_id {
     left: auto; 
-     right: 6px;
+     right: 10px;
     width: 100%;
     
-  max-width: 430px;
+  /* max-width: 430px; */
     /* margin: 0; */
   }
 }
